refactor: clean up compiler warnings, unused imports, redundant interfaces, and JDK deprecations