@@ -38,15 +38,15 @@ public final class TaskManagerItem implements Externalizable {
     }
 
     public boolean containsCitizen(int citizenID) {
-        return listCitizens.contains(new Integer(citizenID));
+        return listCitizens.contains(Integer.valueOf(citizenID));
     }
 
     public void addCitizen(int citizenID) {
-        listCitizens.add(new Integer(citizenID));
+        listCitizens.add(Integer.valueOf(citizenID));
     }
 
     public void removeCitizen(int citizenID) {
-        listCitizens.remove(new Integer(citizenID));
+        listCitizens.remove(Integer.valueOf(citizenID));
     }
 
     public String toString() {
@@ -58,6 +58,7 @@ public final class TaskManagerItem implements Externalizable {
         return buffer.toString();
     }
 
+    @SuppressWarnings("unchecked")
     public void readExternal(ObjectInput in) throws IOException, ClassNotFoundException {
         task = (Task) in.readObject();
         listCitizens = (ArrayList<Integer>) in.readObject();
