@@ -90,8 +90,9 @@ public class ItemManager {
                 ArrayList<Integer> habitat = new ArrayList<Integer>();
                 if (imi.getHabitatAsString() != null) {
                     for (int i = 0; i < imi.getHabitatAsString().size(); i++) {
-                        if (!habitat.contains(imi.getHabitatAsString().get(i))) {
-                            habitat.add(new Integer(TerrainManager.getItem(imi.getHabitatAsString().get(i)).getTerrainID()));
+                        int terrainId = TerrainManager.getItem(imi.getHabitatAsString().get(i)).getTerrainID();
+                        if (!habitat.contains(Integer.valueOf(terrainId))) {
+                            habitat.add(Integer.valueOf(terrainId));
                             //getHabitat ().add (habitat.get (i));
                         }
                     }
